--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   <main class="container">
     <div class="card-mobile">
 
-      <figure class="div-image">
-        <img src="assets/images/illustration-article.svg" alt="illustration-article" class="blog-image">
+      <figure class="blog-image-figure">
+        <img src="assets/images/illustration-article.svg" alt="Illustation of an article" class="blog-image">
       </figure>
 
       <div class="content">
         <div class="category">
-          <span class="learning" aria-label="Category: Learning">Learning</span>
+          <strong class="learning">Learning</strong>
         </div>
 
         <p class="publish-date">
@@ -34,14 +34,14 @@
         <p class="description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
       </div>
 
-      <aside class="author">
+      <section class="author">
         <div class="userpic">
           <img class="icon" src="assets/images/image-avatar.webp" alt="Photo of Greg Hooper">
         </div>
 
         <p class="authorname">Greg Hooper</p>
 
-      </aside>
+      </section>
 
     </div>
   </main>
